force-app/main/default/objects/Area_Type__c/Area_Type__c.object-meta.xml
<CustomObject>
    <label>Area Type</label>
    <nameField>
        <label>Area Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Area Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>