force-app/main/default/objects/Area_Type__c/fields/RDS_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>RDS_Area_Code__c</fullName>
    <label>Area  Code</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>