force-app/main/default/objects/Area_Type__c/fields/RDS_Area_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>RDS_Area_Type_Description__c</fullName>
    <label>Area Type Description</label>
    <type>TextArea</type>
</CustomField>