force-app/main/default/objects/Area_Type__c/fields/RDS_Is_Plot_Area__c.field-meta.xml
<CustomField>
    <fullName>RDS_Is_Plot_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Plot Area</label>
    <type>Checkbox</type>
</CustomField>