force-app/main/default/objects/Area_Type__c/fields/RDS_Master_config__c.field-meta.xml
<CustomField>
    <fullName>RDS_Master_config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master config</label>
    <referenceTo>Master__c</referenceTo>
    <relationshipLabel>Area Types</relationshipLabel>
    <relationshipName>Area_Types</relationshipName>
    <type>Lookup</type>
</CustomField>